# hot-tamale

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: THREAT_MODEL.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  secret-scan.yml
benchmarks/: README.md  run.py
docs/: architecture.md
examples/: customer_support.py  deploy_to_production.py  live_fire.py  quickstart.py
src/hot_tamale/: __init__.py  actions.py  agent.py  guardrails.py  mcp.py  telemetry.py  tools.py
tests/: test_adversarial.py  test_agent.py  test_performance.py  test_security.py
